--- a/input.css
+++ b/input.css
@@ -7,7 +7,13 @@
         @apply font-gemunu uppercase;
     }
 
+    h2 {
+        @apply text-2xl tracking-wider;
+    }
+
     a {
         @apply font-gemunu;
     }
+
+
 }
